Fixing alignments in Contact section

--- a/dev/css/landing-page.scss
+++ b/dev/css/landing-page.scss
@@ -138,6 +138,8 @@ h6 {
 	color: $colour_desert_storm_approx;
 	background: $url_1 no-repeat center center;
 	background-size: cover;
+    text-align: center;
+    
 	h2 {
 		margin: 0;
 		//Instead of the line below you could use @include text-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
@@ -146,15 +148,17 @@ h6 {
 	}
 	ul {
 		margin-bottom: 0;
+        position: relative;
+        //left: 40%;
 	}
 }
 .banner-social-buttons {
-	float: right;
+	//float: right;
 	margin-top: 0;
 }
 @media(max-width:1199px) {
 	ul.banner-social-buttons {
-		float: left;
+		//float: left;
 		margin-top: 15px;
 	}
 }
